--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="./src/assets/images/pin.png" />
+  <link rel="icon" href="/src/assets/images/pin.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>OASIP US-1-T2P</title>
 </head>
